--- a/css/dark.css
+++ b/css/dark.css
@@ -69,14 +69,14 @@
   }
   #dark-mode-toggle .moon {
     z-index: 2;
-    transition: transform .3s, opacity .3s, fill .3s;
+    transition: transform 0.3s, opacity 0.3s, fill 0.3s;
     fill: #000;
   }
   #dark-mode-toggle .sun {
     z-index: 1;
     transform: translate(-50%, 100%);
     opacity: 0;
-    transition: transform .3s, opacity .3s;
+    transition: transform 0.3s, opacity 0.3s;
   }
 }
 /* Desktop */
