--- a/css/root.css
+++ b/css/root.css
@@ -15,7 +15,6 @@
     font-style: normal;
     font-weight: 400;
     src: local(''), url('../fonts/roboto-v29-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v29-latin-regular.woff') format('woff');
-    
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
   /* roboto-700 - latin */
@@ -24,7 +23,6 @@
     font-style: normal;
     font-weight: 700;
     src: local(''), url('../fonts/roboto-v29-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v29-latin-700.woff') format('woff');
-    
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
   /* roboto-900 - latin */
@@ -33,7 +31,6 @@
     font-style: normal;
     font-weight: 900;
     src: local(''), url('../fonts/roboto-v29-latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */ url('../fonts/roboto-v29-latin-900.woff') format('woff');
-    
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
   body,
@@ -50,11 +47,9 @@
   *:after {
     margin: 0;
     padding: 0;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
   }
   body {
-    -webkit-transition: background-color 0.3s;
     transition: background-color 0.3s;
   }
   .container {
@@ -101,10 +96,8 @@
     z-index: 1;
     background-color: var(--primary);
     color: #000;
-    -webkit-transition: color .3s;
-    transition: color .3s;
-    -webkit-transition-delay: .1s;
-            transition-delay: .1s;
+    transition: color 0.3s;
+    transition-delay: 0.1s;
   }
   .button-solid:hover {
     color: #fff;
@@ -123,8 +116,7 @@
     z-index: -1;
     background-color: #000;
     width: 0;
-    -webkit-transition: width .3s;
-    transition: width .3s;
+    transition: width 0.3s;
   }
   .skip {
     position: absolute;
@@ -146,7 +138,7 @@
 @media only screen and (min-width: 2000px) {
   body,
   html {
-    font-size: .85vw;
+    font-size: 0.85vw;
   }
 }
 /*-- -------------------------- -->
@@ -169,8 +161,7 @@
     background-color: #fff;
     width: 100%;
     height: 100%;
-    -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-            box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   }
   #navigation .container {
     padding: 0.8125em 0;
@@ -202,10 +193,8 @@
     background: transparent;
     padding: 0;
     top: 50%;
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-    -webkit-transition: top .3s;
-    transition: top .3s;
+    transform: translateY(-50%);
+    transition: top 0.3s;
   }
   #navigation .hamburger-menu span {
     height: 2px;
@@ -214,9 +203,7 @@
     display: block;
     position: absolute;
     left: 50%;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-    -webkit-transition: background-color 0.3s;
+    transform: translateX(-50%);
     transition: background-color 0.3s;
   }
   #navigation .hamburger-menu span:before {
@@ -229,10 +216,7 @@
     opacity: 1;
     top: -6px;
     left: 0;
-    -webkit-transition: width .3s, left .3s, top .3s, -webkit-transform .5s;
-    transition: width .3s, left .3s, top .3s, -webkit-transform .5s;
-    transition: width .3s, left .3s, top .3s, transform .5s;
-    transition: width .3s, left .3s, top .3s, transform .5s, -webkit-transform .5s;
+    transition: width 0.3s, left 0.3s, top 0.3s, transform 0.5s;
   }
   #navigation .hamburger-menu span:after {
     content: '';
@@ -244,25 +228,20 @@
     opacity: 1;
     top: 6px;
     left: 0;
-    -webkit-transition: width .3s, left .3s, top .3s, -webkit-transform .3s;
-    transition: width .3s, left .3s, top .3s, -webkit-transform .3s;
-    transition: width .3s, left .3s, top .3s, transform .3s;
-    transition: width .3s, left .3s, top .3s, transform .3s, -webkit-transform .3s;
+    transition: width 0.3s, left 0.3s, top 0.3s, transform 0.3s;
   }
   #navigation .hamburger-menu.clicked span {
     background-color: transparent;
   }
   #navigation .hamburger-menu.clicked span:before {
     width: 100%;
-    -webkit-transform: translate(-50%, -50%) rotate(225deg);
-            transform: translate(-50%, -50%) rotate(225deg);
+    transform: translate(-50%, -50%) rotate(225deg);
     left: 50%;
     top: 50%;
   }
   #navigation .hamburger-menu.clicked span:after {
     width: 100%;
-    -webkit-transform: translate(-50%, -50%) rotate(-225deg);
-            transform: translate(-50%, -50%) rotate(-225deg);
+    transform: translate(-50%, -50%) rotate(-225deg);
     left: 50%;
     top: 50%;
   }
@@ -274,53 +253,40 @@
     border-radius: 0 0 0.375em 0.375em;
     z-index: -1;
     overflow: hidden;
-    -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-            box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     background-color: #fff;
     top: 4em;
     padding-top: 0;
     height: 0;
-    -webkit-transition: height 0.3s, padding-top 0.3s, top 0.3s;
     transition: height 0.3s, padding-top 0.3s, top 0.3s;
   }
   #navigation #navbar-menu ul {
     padding: 0;
-    -webkit-perspective: 700px;
-            perspective: 700px;
+    perspective: 700px;
   }
   #navigation #navbar-menu ul li {
     list-style: none;
     margin-bottom: 1.5em;
     text-align: center;
-    -webkit-transform-style: preserve-3d;
-            transform-style: preserve-3d;
+    transform-style: preserve-3d;
     opacity: 0;
-    -webkit-transform: translateY(-0.4375em) rotateX(90deg);
-            transform: translateY(-0.4375em) rotateX(90deg);
-    -webkit-transition: opacity .5s, -webkit-transform .5s;
-    transition: opacity .5s, -webkit-transform .5s;
-    transition: opacity .5s, transform .5s;
-    transition: opacity .5s, transform .5s, -webkit-transform .5s;
+    transform: translateY(-0.4375em) rotateX(90deg);
+    transition: opacity 0.5s, transform 0.5s;
   }
   #navigation #navbar-menu ul li:nth-of-type(1) {
-    -webkit-transition-delay: .1s;
-            transition-delay: .1s;
+    transition-delay: 0.1s;
   }
   #navigation #navbar-menu ul li:nth-of-type(2) {
-    -webkit-transition-delay: .2s;
-            transition-delay: .2s;
+    transition-delay: 0.2s;
   }
   #navigation #navbar-menu ul li:nth-of-type(3) {
-    -webkit-transition-delay: .3s;
-            transition-delay: .3s;
+    transition-delay: 0.3s;
   }
   #navigation #navbar-menu ul li:nth-of-type(4) {
-    -webkit-transition-delay: .4s;
-            transition-delay: .4s;
+    transition-delay: 0.4s;
   }
   #navigation #navbar-menu ul li:nth-of-type(5) {
-    -webkit-transition-delay: .5s;
-            transition-delay: .5s;
+    transition-delay: 0.5s;
   }
   #navigation #navbar-menu ul li a {
     text-decoration: none;
@@ -352,8 +318,7 @@
   }
   #navigation #navbar-menu.open ul li {
     opacity: 1;
-    -webkit-transform: translateY(0) rotateX(0);
-            transform: translateY(0) rotateX(0);
+    transform: translateY(0) rotateX(0);
   }
 }
 /* Desktop */
@@ -375,8 +340,7 @@
   }
   body.scroll #navigation .background-color-div {
     height: 100%;
-    -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
   body.scroll #navigation .logo .light {
     display: none;
@@ -392,8 +356,7 @@
   }
   body.dark-mode #navigation .background-color-div {
     height: 100%;
-    -webkit-box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   }
   #navigation {
     width: 100%;
@@ -403,12 +366,8 @@
     left: 0;
     z-index: 200000;
     padding: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
   #navigation .background-color-div {
     position: absolute;
@@ -417,20 +376,13 @@
     width: 100%;
     background-color: #fff;
     height: 0;
-    -webkit-transition: height .3s;
-    transition: height .3s;
+    transition: height 0.3s;
   }
   #navigation .container {
     max-width: 75em;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: flex-end;
+    align-items: center;
   }
   #navigation .logo {
     margin-right: auto;
@@ -443,15 +395,9 @@
   }
   #navigation #navbar-menu ul {
     padding: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: flex-end;
+    align-items: center;
   }
   #navigation #navbar-menu ul li {
     list-style: none;
@@ -466,8 +412,7 @@
     position: relative;
     z-index: 1;
     color: #fff;
-    -webkit-transition: color .3s;
-    transition: color .3s;
+    transition: color 0.3s;
   }
   #navigation #navbar-menu ul li a:before {
     content: '';
@@ -481,8 +426,7 @@
     z-index: -1;
     left: 0;
     width: 0%;
-    -webkit-transition: width .3s;
-    transition: width .3s;
+    transition: width 0.3s;
   }
   #navigation #navbar-menu ul li a:hover:before {
     width: 100%;
@@ -500,8 +444,7 @@
     left: 0em;
     right: -0.31578947em;
     z-index: -1;
-    -webkit-transition: bottom .3s;
-    transition: bottom .3s;
+    transition: bottom 0.3s;
   }
   #navigation .hamburger-menu {
     display: none;
@@ -568,19 +511,10 @@
 /* Mobile */
 @media only screen and (min-width: 0em) {
   #int-hero {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     position: relative;
     z-index: 1;
     min-height: 30vh;
@@ -593,7 +527,7 @@
     height: 100%;
     width: 100%;
     background: #000;
-    opacity: .7;
+    opacity: 0.7;
     top: 0;
     left: 0;
     z-index: -1;
@@ -612,8 +546,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
   #int-hero h1 {
     color: #fff;
@@ -651,8 +584,7 @@
     min-height: 18.75em;
     height: auto;
     padding-top: 11.25em;
-    -webkit-padding-after: 6.25em;
-            padding-block-end: 6.25em;
+    padding-block-end: 6.25em;
     background-attachment: fixed;
     font-size: inherit;
   }
@@ -689,7 +621,7 @@
     font-size: 0.875em;
     line-height: 1.92857143;
     color: #fff;
-    opacity: .9;
+    opacity: 0.9;
     text-align: center;
     width: 100%;
     width: 21.92857143em;
@@ -701,14 +633,9 @@
     margin: auto;
   }
   #footer .right-section .lists {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    justify-content: space-between;
+    flex-wrap: wrap;
     width: 96%;
     max-width: 19.1875em;
     margin: auto;
@@ -722,15 +649,9 @@
     margin-top: 3.125em;
   }
   #footer .right-section .lists ul:nth-of-type(3) li {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: flex-start;
+    align-items: center;
     margin-bottom: 0.88888889em;
   }
   #footer .right-section .lists ul:nth-of-type(3) li:last-of-type {
@@ -741,14 +662,13 @@
     margin-bottom: 0.66666667em;
     color: #fff;
     font-size: 1em;
-    opacity: .9;
+    opacity: 0.9;
   }
   #footer .right-section .lists ul li a {
     text-decoration: none;
     color: #fff;
     line-height: 1.16666667;
-    -webkit-transition: color .3s;
-    transition: color .3s;
+    transition: color 0.3s;
   }
   #footer .right-section .lists ul li a:hover {
     color: var(--primary);
@@ -774,12 +694,8 @@
     left: 0;
   }
   #footer .right-section .buttons {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
   #footer .right-section .button-solid {
     margin: 0;
@@ -815,18 +731,10 @@
     font-size: min(1.2vw, 1em);
   }
   #footer .container {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
     width: 96%;
     max-width: 82.5em;
     margin: auto;
@@ -876,16 +784,13 @@
     opacity: 1;
     bottom: -0.16666667em;
     left: 0;
-    -webkit-transition: width .3s;
-    transition: width .3s;
+    transition: width 0.3s;
   }
   #footer .right-section .lists ul li a:hover:before {
     width: 100%;
   }
   #footer .right-section .buttons {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    justify-content: flex-start;
   }
   #footer .credit .copyright {
     display: inline-block;
