--- a/css/root.css
+++ b/css/root.css
@@ -406,8 +406,8 @@
   }
   #navigation #navbar-menu ul li a {
     text-decoration: none;
-    font-weight: bold;
-    font-size: 1.1875em;
+    font-weight: normal;
+    font-size: 0.875em;
     text-transform: uppercase;
     position: relative;
     z-index: 1;
@@ -418,11 +418,11 @@
     content: '';
     position: absolute;
     display: block;
-    height: 0.31578947em;
+    height: 0.15789474em;
     border-radius: 0.15789474em;
     background: var(--primary);
     opacity: 1;
-    bottom: 0.10526316em;
+    bottom: 0.05263158em;
     z-index: -1;
     left: 0;
     width: 0%;
@@ -436,10 +436,10 @@
     position: absolute;
     display: block;
     width: 100%;
-    height: 0.31578947em;
+    height: 0.15789474em;
     background: var(--primary);
     opacity: 1;
-    bottom: 0.10526316em;
+    bottom: 0.05263158em;
     border-radius: 0.15789474em;
     left: 0em;
     right: -0.31578947em;
