--- a/css/root.less
+++ b/css/root.less
@@ -514,8 +514,8 @@
 
                     a {
                         text-decoration: none;
-                        font-weight: bold;
-                        font-size: 19/16em;
+                        font-weight:normal;
+                        font-size: 14/16em;
                         text-transform: uppercase;
                         position: relative;
                         z-index: 1;
@@ -528,11 +528,11 @@
                             content: '';
                             position: absolute;
                             display: block;
-                            height: 6/19em;
+                            height: 3/19em;
                             border-radius: 3/19em;
                             background: var(--primary);
                             opacity: 1;
-                            bottom: 2/19em;
+                            bottom: 1/19em;
                             z-index: -1;
                             left: 0;
         
@@ -554,10 +554,10 @@
                                 position: absolute;
                                 display: block;
                                 width: 100%;
-                                height: 6/19em;
+                                height: 3/19em;
                                 background: var(--primary);
                                 opacity: 1;
-                                bottom: 2/19em;
+                                bottom: 1/19em;
                                 border-radius: 3/19em;
                                 left: 0/19em;
                                 right: -6/19em;
