Less obnoxious box shadow

--- a/css/dark.less
+++ b/css/dark.less
@@ -7,7 +7,7 @@
 
     // Dark Mode Color Scheme
     :root {
-        --dark: #082032;
+        --dark: #05131f;
         --medium: #2C394B;
         --accent: #334756;
     }
