--- a/css/local.less
+++ b/css/local.less
@@ -66,8 +66,8 @@
                 width: 100%;
                 background: var(--primary);
                 opacity: 1;
-                top: 40/16em;
-                left: -40/16em;
+                top: 20/16em;
+                left: -20/16em;
             }
 
             &:after {
@@ -259,7 +259,9 @@
 
             &:before {
                 left: auto;
-                right: -40/16em;
+                right: -20/16em;
+                top: -20/16em;
+                bottom: auto;
             }
 
             &:after {
