--- a/css/dark.css
+++ b/css/dark.css
@@ -4,7 +4,7 @@
 /* Mobile */
 @media only screen and (min-width: 0em) {
   :root {
-    --dark: #082032;
+    --dark: #05131f;
     --medium: #2C394B;
     --accent: #334756;
   }
