--- a/css/critical.less
+++ b/css/critical.less
@@ -215,6 +215,7 @@
         justify-content: space-between;
         align-items: flex-start;
         width: 98%;
+        gap: 10/16em;
 
         .card {
             margin: 0;
@@ -227,6 +228,7 @@
 @media only screen and (min-width: 1300px) {
     .services {
         padding: 50/16em 80/16em;
+
 
         .card {
             max-width: 357/16em;
