--- a/css/root.less
+++ b/css/root.less
@@ -586,7 +586,7 @@
     body.dark-mode {
         #navigation {
             .background-color-div {
-                background-color: var(--dark);
+                background: var(--gradient);
             }
 
             .hamburger-menu {
@@ -641,7 +641,8 @@
     body.dark-mode {
         #navigation {
             .background-color-div {
-                background-color: var(--dark);
+                // background-color: var(--dark);
+                background: var(--gradient);
             }
 
             .logo {
