--- a/css/root.css
+++ b/css/root.css
@@ -453,7 +453,7 @@
 /* Dark Mode Mobile */
 @media only screen and (max-width: 1023px) {
   body.dark-mode #navigation .background-color-div {
-    background-color: var(--dark);
+    background: var(--gradient);
   }
   body.dark-mode #navigation .hamburger-menu.clicked span {
     background-color: var(--dark);
@@ -487,7 +487,7 @@
 /* Dark Mode Desktop */
 @media only screen and (min-width: 1024px) {
   body.dark-mode #navigation .background-color-div {
-    background-color: var(--dark);
+    background: var(--gradient);
   }
   body.dark-mode #navigation .logo .light {
     display: block;
