--- a/css/dark.less
+++ b/css/dark.less
@@ -10,10 +10,13 @@
         --dark: #05131f;
         --medium: #2C394B;
         --accent: #334756;
+        --gradient: linear-gradient(to right, #05131f, #071b2c);
+        --bodyGradient: linear-gradient(to bottom, #071b2c, #05131f,);
+        --crazyGradient: linear-gradient(to right, #05131f, #a1d0f9);
     }
 
     body.dark-mode {
-        background-color: var(--dark);
+        background: var(--bodyGradient);
 
         p, li, h1, h2, h3, h4, h5, h6 {
             color: #fff;
